--- a/Ejercicio 1/pages/sumarcontar.html
+++ b/Ejercicio 1/pages/sumarcontar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suma de pares</title>
+    <title>Suma con conteo</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel='stylesheet' href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -86,13 +86,13 @@
     <footer class="footer-wrapper">
         <p class="copyrigth">Tema diseñado por: Anthony</p>
         <div class="social-media">
-            <a class="icon">
+            <a class="icon" href="https://github.com/aterana3">
                 <i class="bx bxl-github"></i>
             </a>
-            <a class="icon">
+            <a class="icon" href="https://twitter.com/">
                 <i class="bx bxl-twitter"></i>
             </a>
-            <a class="icon">
+            <a class="icon" href="https://facebook.com/">
                 <i class='bx bxl-facebook-circle'></i>
             </a>
         </div>
