--- a/Ejercicio 1/pages/ventas.html
+++ b/Ejercicio 1/pages/ventas.html
@@ -90,13 +90,13 @@
     <footer class="footer-wrapper">
         <p class="copyrigth">Tema diseñado por: Anthony</p>
         <div class="social-media">
-            <a class="icon">
+            <a class="icon" href="https://github.com/aterana3">
                 <i class="bx bxl-github"></i>
             </a>
-            <a class="icon">
+            <a class="icon" href="https://twitter.com/">
                 <i class="bx bxl-twitter"></i>
             </a>
-            <a class="icon">
+            <a class="icon" href="https://facebook.com/">
                 <i class='bx bxl-facebook-circle'></i>
             </a>
         </div>
