--- a/Ejercicio 1/index.html
+++ b/Ejercicio 1/index.html
@@ -56,7 +56,6 @@
                 <li class="item">
                     <a class="nav" href="./pages/perfecto.html">Perfecto</a>
                 </li>
-                
             </ul>
         </nav>
     </div>
@@ -78,13 +77,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <footer class="footer-wrapper">
         <p class="copyrigth">Tema diseñado por: Anthony</p>
         <div class="social-media">
-            <a class="icon">
+            <a class="icon" href="https://github.com/aterana3">
                 <i class="bx bxl-github"></i>
             </a>
-            <a class="icon">
+            <a class="icon" href="https://twitter.com/">
                 <i class="bx bxl-twitter"></i>
             </a>
-            <a class="icon">
+            <a class="icon" href="https://facebook.com/">
                 <i class='bx bxl-facebook-circle'></i>
             </a>
         </div>
